2007-11-30  Frank Warmerdam  <warmerdam@pobox.com>

	* add latlon and lonlat as aliases.

2007-11-29  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.6.0beta1 release.

	* nad/epsg: Upgrade to EPSG 6.13

2007-11-25  Frank Warmerdam  <warmerdam@pobox.com>

	* pj_transform.c: Do ellipsoid comparisons using the _orig ellipse
	values rather than the adjusted one.  Use these original values for
	any conversion to/from geocentric coordinates. 

	Also, only do pj_datum_transform if neither the source nor destination 
	is PJD_UNKNOWN.  This means we will no longer attempt via-geocentric 
	adjustments for coordinate systems lacking a datum definition (having 
	only an ellipsoid.

	* projects.h, pj_init.c: added a_orig and es_orig values in the PJ
	structure so we can distinguish between the originally requested 
	ellipsoid, and the ellipsoid after adjustment for spherical projections

	Todays changes courtesy of bug 1602. 

2007-09-28  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/esri.extra: Add "900913" code for google mercator.

2007-09-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/gencent.c/h, src/pj_transform.c: Restructure so geocentric code
	does not use static variables - reentrancy fix.

	* src/nad_init.c: Improve error recovery if ctable datum shift files
	fails to load.

2007-08-20  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_api.h: include void in arg list for prototypes with no
	arguments to avoid warning about not being a function declaration.

2007-07-06  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_open_lib.c: Per suggestion from Janne, ensure
	pj_set_searchpath(0,NULL) clears the search path cleanly.

2007-06-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj.c: pj_free() the definition to simplify leak testing.

2007-04-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_laea.c: Fix memory leak of apa field.

2007-04-03  Frank Warmerdam  <warmerdam@pobox.com>
